--- a/Multi_Output_Linear_Reg_DNN.ipynb
+++ b/Multi_Output_Linear_Reg_DNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNnMX2k7pEFgS2chrlJHsZ6",
+      "authorship_tag": "ABX9TyMWZzKCiP6jITv38jcULViA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,9 +63,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Create the dataset**"
+      ],
+      "metadata": {
+        "id": "YnD7qABhDX7T"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        " X, y = make_regression(n_samples=1000, n_features=10, n_informative=5, n_targets=3, random_state=2)"
+        "X, y = make_regression(n_samples=1000, n_features=10, n_informative=5, n_targets=7, random_state=2)"
       ],
       "metadata": {
         "id": "3RSa7VfI-C7m"
@@ -74,21 +83,63 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Create the model**"
+      ],
+      "metadata": {
+        "id": "-zfLe4SnDwm3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_inputs, n_outputs = X.shape[1], y.shape[1]"
+      ],
+      "metadata": {
+        "id": "OA1ICS7j--2G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Sequential()\n",
+        "model.add(Dense(20, input_dim=n_inputs, kernel_initializer='he_uniform', activation='relu'))\n",
+        "model.add(Dense(n_outputs))\n",
+        "\n",
+        "model.compile(loss='mae', optimizer='adam')"
+      ],
+      "metadata": {
+        "id": "8UYyFRvmAFAt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Evaluate the model**"
+      ],
+      "metadata": {
+        "id": "uk0shwlmDbAt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# evaluate a model using repeated k-fold cross-validation\n",
-        "def evaluate_model(X, y):\n",
+        "def evaluate_model(X, y, model):\n",
         " results = list()\n",
         " n_inputs, n_outputs = X.shape[1], y.shape[1]\n",
         " # define evaluation procedure\n",
         " cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
         " # enumerate folds\n",
         " for train_ix, test_ix in cv.split(X):\n",
-        "  # prepare data\n",
-        "  X_train, X_test = X[train_ix], X[test_ix]\n",
-        "  y_train, y_test = y[train_ix], y[test_ix]\n",
-        " # define model\n",
-        " model = get_model(n_inputs, n_outputs)\n",
+        "    # prepare data\n",
+        "    X_train, X_test = X[train_ix], X[test_ix]\n",
+        "    y_train, y_test = y[train_ix], y[test_ix]\n",
         " # fit model\n",
         " model.fit(X_train, y_train, verbose=0, epochs=100)\n",
         " # evaluate model on test set\n",
@@ -112,7 +163,7 @@
       },
       "outputs": [],
       "source": [
-        "results = evaluate_model(X, y)\n",
+        "results = evaluate_model(X, y, model)\n",
         "# summarize performance\n",
         "print('MAE: %.3f (%.3f)' % (mean(results), std(results)))"
       ]
@@ -120,10 +171,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n"
+        "**Make a prediction**"
       ],
       "metadata": {
         "id": "DaHF1Bmh_AaJ"
@@ -132,36 +180,9 @@
     {
       "cell_type": "code",
       "source": [
-        "n_inputs, n_outputs = X.shape[1], y.shape[1]"
-      ],
-      "metadata": {
-        "id": "OA1ICS7j--2G"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        " model = Sequential()\n",
-        " model.add(Dense(20, input_dim=n_inputs, kernel_initializer='he_uniform', activation='relu'))\n",
-        " model.add(Dense(n_outputs))\n",
-        " model.compile(loss='mae', optimizer='adam')"
-      ],
-      "metadata": {
-        "id": "8UYyFRvmAFAt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# make a prediction for new data\n",
         "row = [-0.99859353,2.19284309,-0.42632569,-0.21043258,-1.13655612,-0.55671602,-0.63169045,-0.87625098,-0.99445578,-0.3677487]\n",
-        "newX = asarray([row])\n",
-        "yhat = model.predict(newX)\n",
-        "print('Predicted: %s' % yhat[0])"
+        "prediction = model.predict([row])\n",
+        "print('Predicted: %s' % prediction)"
       ],
       "metadata": {
         "id": "p8UER1lr-mRz"
