--- a/Multi_Output_Linear_Reg_DNN.ipynb
+++ b/Multi_Output_Linear_Reg_DNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMWZzKCiP6jITv38jcULViA",
+      "authorship_tag": "ABX9TyNq+RgwqizmgaDBOHjyvk2L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -189,6 +189,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment**<br>\n",
+        "Change the datset size, number of inputs and number of outputs."
+      ],
+      "metadata": {
+        "id": "lDpReoVKHSNb"
+      }
     }
   ]
 }
