--- a/CrossValidation1.ipynb
+++ b/CrossValidation1.ipynb
@@ -56,7 +56,7 @@
         ">divide the data into training and test sets\n",
         "\n",
         "The model is trained on the training set. <br>\n",
-        "Then to test the accuracy of the model predictions, it is tested using data it has never seen before... the test set. "
+        "Then to test the accuracy of the model predictions, it is tested using data it has never seen before... the test set."
       ]
     },
     {
@@ -65,7 +65,7 @@
         "id": "5JVnPGpRuRB4"
       },
       "source": [
-        "Once we have a model that is close to our performance criteria, we can do hyperparameter tuning to select the best hyperparameters for the model. "
+        "Once we have a model that is close to our performance criteria, we can do hyperparameter tuning to select the best hyperparameters for the model."
       ]
     },
     {
@@ -87,9 +87,9 @@
         "id": "Lm7OqaoUtyHw"
       },
       "source": [
-        "The downsides of this method are: \n",
-        "1. Reducing the amount of data available for training the model. \n",
-        "2. The results of the model performance are variable depending upon the random selection of the training and test sets. "
+        "The downsides of this method are:\n",
+        "1. Reducing the amount of data available for training the model.\n",
+        "2. The results of the model performance are variable depending upon the random selection of the training and test sets."
       ]
     },
     {
@@ -107,7 +107,7 @@
         "id": "3rlpaSm7wPpE"
       },
       "source": [
-        "If we use Cross-validation, a validation set is no longer necessary. We need only the training and the test set. "
+        "If we use Cross-validation, a validation set is no longer necessary. We need only the training and the test set."
       ]
     },
     {
@@ -148,7 +148,7 @@
         "This is the basic method for testing models. <br>\n",
         "1. Split the dataset into training and test sets.<br>\n",
         "2. Train the model on the training set<br>\n",
-        "3. Test the model on the test set. "
+        "3. Test the model on the test set."
       ]
     },
     {
@@ -191,9 +191,9 @@
         "id": "TRvsaFREAuSV"
       },
       "source": [
-        "Split the dataset into training and test sets. Use 80% of the data for training. \n",
+        "Split the dataset into training and test sets. Use 80% of the data for training.\n",
         "20% for testing<br>\n",
-        "Note the accuracy "
+        "Note the accuracy"
       ]
     },
     {
@@ -206,7 +206,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "print(X.shape, y.shape)\n",
         "# split into train test sets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, \n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20,\n",
         "                                                    random_state=1)\n",
         "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n",
         "# fit the model\n",
@@ -228,7 +228,7 @@
       },
       "source": [
         "Using the same data, do another 80/20 split of the data<br>\n",
-        "Note the accuracy the model this time. "
+        "Note the accuracy the model this time."
       ]
     },
     {
@@ -257,7 +257,7 @@
         "id": "-7U9Cb9nPKFj"
       },
       "source": [
-        "The accuracy changes depending upon the train-test split. Even when the split is the same percentage. \n"
+        "The accuracy changes depending upon the train-test split. Even when the split is the same percentage.\n"
       ]
     },
     {
@@ -285,7 +285,7 @@
       },
       "source": [
         "# **K-fold CV**<br>\n",
-        "K-fold CV uses the following algorithm: \n",
+        "K-fold CV uses the following algorithm:\n",
         "1. Randomly split the data into K equally sized parts\n",
         "2. Select a single partition from the K parts to be the test set\n",
         "3. Train the model K times, once for each K\n"
@@ -431,7 +431,7 @@
         "# enumerate splits\n",
         "for train, test in kfold.split(dataIn):\n",
         "\tprint('train: %s, test: %s' % (train, test))\n",
-        " \n",
+        "\n",
         "#numbers are the index of the element"
       ],
       "execution_count": null,
@@ -449,7 +449,8 @@
         "# data sample\n",
         "data = array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6])\n",
         "# prepare cross validation\n",
-        "kfold = KFold(3, True)\n",
+        "kfold = KFold( n_splits=3,shuffle=True)\n",
+        "\n",
         "# enumerate splits\n",
         "for train, test in kfold.split(data):\n",
         "\tprint('train: %s, test: %s' % (data[train], data[test]))"
@@ -553,7 +554,7 @@
         "To calculate the best 'k', we would train the model on all available data and estimate the performance on a separate large and representative hold-out dataset.<br>\n",
         "The performance on this hold-out dataset would represent the “true” performance of the model and any cross-validation performances on the training dataset would represent an estimate of this score.<br>\n",
         "\n",
-        "The KFold method is good, if you have a large enough dataset to leave out a large percentage of your dataset. "
+        "The KFold method is good, if you have a large enough dataset to leave out a large percentage of your dataset."
       ]
     },
     {
@@ -604,8 +605,8 @@
         "# create the dataset\n",
         "#Change the dataset size here:\n",
         "def get_dataset(n_samples=100):\n",
-        "\tX, y = make_classification(n_samples=n_samples, n_features=20, \n",
-        "                            n_informative=15, n_redundant=5, \n",
+        "\tX, y = make_classification(n_samples=n_samples, n_features=20,\n",
+        "                            n_informative=15, n_redundant=5,\n",
         "                            random_state=1)\n",
         "\treturn X, y\n",
         "\n",
