--- a/Ensemble_Learning.ipynb
+++ b/Ensemble_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPfBkiwge7hQhvEEYk2GajW",
+      "authorship_tag": "ABX9TyMIsKB9knOsLjpg54nWEu5H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,15 +30,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this notebook, we cover:\n",
+        "In this notebook we learn:\n",
         "\n",
-        "Bagging Ensembles including Bagged Decision Trees, Random Forest and Extra Trees.\n",
-        "Boosting Ensembles including AdaBoost and Stochastic Gradient Boosting.\n",
-        "Voting Ensembles for averaging the predictions for any arbitrary models."
+        "Weighted Average Ensembles are an extension to voting ensembles where model votes are proportional to model performance.\n",
+        "How to develop weighted average ensembles using the voting ensemble from scikit-learn.\n",
+        "\n",
+        "How to evaluate the Weighted Average Ensembles for classification and regression and confirm the models are skillful."
       ],
       "metadata": {
-        "id": "9RkKhv3fuq4e"
+        "id": "dkc7rHrSxnaZ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo"
+      ],
+      "metadata": {
+        "id": "C6LQs_oxxg91"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import Image"
+      ],
+      "metadata": {
+        "id": "dFUplS0Yx9kt"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -62,6 +87,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import pandas\n",
+        "from sklearn import model_selection\n",
+        "from sklearn.ensemble import BaggingClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier"
+      ],
+      "metadata": {
+        "id": "UyE2a2mUyCGo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
+        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
+        "dataframe = pandas.read_csv(url, names=names)\n",
+        "array = dataframe.values\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "seed = 7"
+      ],
+      "metadata": {
+        "id": "tLcrP5uzyHXU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "UYqLXv3btK8T"
@@ -69,21 +125,11 @@
       "outputs": [],
       "source": [
         "# Bagged Decision Trees for Classification\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.ensemble import BaggingClassifier\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
-        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-        "dataframe = pandas.read_csv(url, names=names)\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "seed = 7\n",
+        "\n",
         "kfold = model_selection.KFold(n_splits=10)\n",
         "cart = DecisionTreeClassifier()\n",
         "num_trees = 100\n",
-        "model = BaggingClassifier(base_estimator=cart, n_estimators=num_trees, random_state=seed)\n",
+        "model = BaggingClassifier(estimator=cart, n_estimators=num_trees, random_state=seed)\n",
         "results = model_selection.cross_val_score(model, X, Y, cv=kfold)\n",
         "print(results.mean())"
       ]
@@ -115,17 +161,19 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "rmf5DlYQyYcI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Random Forest Classification\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
-        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-        "dataframe = pandas.read_csv(url, names=names)\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "seed = 7\n",
+        "\n",
         "num_trees = 100\n",
         "max_features = 3\n",
         "kfold = model_selection.KFold(n_splits=10)\n",
@@ -164,17 +212,18 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.ensemble import ExtraTreesClassifier"
+      ],
+      "metadata": {
+        "id": "H831oiYqyeho"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Extra Trees Classification\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.ensemble import ExtraTreesClassifier\n",
-        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
-        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-        "dataframe = pandas.read_csv(url, names=names)\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "seed = 7\n",
         "num_trees = 100\n",
         "max_features = 7\n",
         "kfold = model_selection.KFold(n_splits=10)\n",
@@ -232,17 +281,18 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.ensemble import AdaBoostClassifier"
+      ],
+      "metadata": {
+        "id": "0HBL7eG2yjwQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# AdaBoost Classification\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.ensemble import AdaBoostClassifier\n",
-        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
-        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-        "dataframe = pandas.read_csv(url, names=names)\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "seed = 7\n",
         "num_trees = 30\n",
         "kfold = model_selection.KFold(n_splits=10)\n",
         "model = AdaBoostClassifier(n_estimators=num_trees, random_state=seed)\n",
@@ -272,17 +322,18 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.ensemble import GradientBoostingClassifier"
+      ],
+      "metadata": {
+        "id": "a0IPwZnpypBT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Stochastic Gradient Boosting Classification\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.ensemble import GradientBoostingClassifier\n",
-        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
-        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-        "dataframe = pandas.read_csv(url, names=names)\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "seed = 7\n",
         "num_trees = 100\n",
         "kfold = model_selection.KFold(n_splits=10)\n",
         "model = GradientBoostingClassifier(n_estimators=num_trees, random_state=seed)\n",
@@ -316,33 +367,101 @@
     {
       "cell_type": "code",
       "source": [
+        "# evaluate a weighted average ensemble for regression with rankings for model weights\n",
+        "from numpy import argsort\n",
+        "from sklearn.datasets import make_regression\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "from sklearn.neighbors import KNeighborsRegressor\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.svm import SVR\n",
+        "from sklearn.ensemble import VotingRegressor\n",
+        "\n",
+        "# get a list of base models\n",
+        "def get_models():\n",
+        " models = list()\n",
+        " models.append(('knn', KNeighborsRegressor()))\n",
+        " models.append(('cart', DecisionTreeRegressor()))\n",
+        " models.append(('svm', SVR()))\n",
+        " return models"
+      ],
+      "metadata": {
+        "id": "XQ28n9c2yvYm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# evaluate each base model\n",
+        "def evaluate_models(models, X_train, X_val, y_train, y_val):\n",
+        "\t# fit and evaluate the models\n",
+        "\tscores = list()\n",
+        "\tfor name, model in models:\n",
+        "\t\t# fit the model\n",
+        "\t\tmodel.fit(X_train, y_train)\n",
+        "\t\t# evaluate the model\n",
+        "\t\tyhat = model.predict(X_val)\n",
+        "\t\tmae = mean_absolute_error(y_val, yhat)\n",
+        "\t\t# store the performance\n",
+        "\t\tscores.append(-mae)\n",
+        "\t\t# report model performance\n",
+        "\treturn scores"
+      ],
+      "metadata": {
+        "id": "oCy2YvRVzUhj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define dataset\n",
+        "X, y = make_regression(n_samples=10000, n_features=20, n_informative=10, noise=0.3, random_state=7)\n",
+        "# split dataset into train and test sets\n",
+        "X_train_full, X_test, y_train_full, y_test = train_test_split(X, y, test_size=0.50, random_state=1)\n",
+        "# split the full train set into train and validation sets\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X_train_full, y_train_full, test_size=0.33, random_state=1)\n"
+      ],
+      "metadata": {
+        "id": "XAqdsoyxzeIM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Voting Ensemble for Classification\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.svm import SVC\n",
-        "from sklearn.ensemble import VotingClassifier\n",
-        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
-        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-        "dataframe = pandas.read_csv(url, names=names)\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "seed = 7\n",
-        "kfold = model_selection.KFold(n_splits=10)\n",
-        "# create the sub models\n",
-        "estimators = []\n",
-        "model1 = LogisticRegression()\n",
-        "estimators.append(('logistic', model1))\n",
-        "model2 = DecisionTreeClassifier()\n",
-        "estimators.append(('cart', model2))\n",
-        "model3 = SVC()\n",
-        "estimators.append(('svm', model3))\n",
-        "# create the ensemble model\n",
-        "ensemble = VotingClassifier(estimators)\n",
-        "results = model_selection.cross_val_score(ensemble, X, Y, cv=kfold)\n",
-        "print(results.mean())"
+        "\n",
+        "# create the base models\n",
+        "models = get_models()\n",
+        "# fit and evaluate each model\n",
+        "scores = evaluate_models(models, X_train, X_val, y_train, y_val)\n",
+        "print(scores)\n",
+        "ranking = 1 + argsort(argsort(scores))\n",
+        "print(ranking)\n",
+        "# create the ensemble\n",
+        "ensemble = VotingRegressor(estimators=models, weights=ranking)\n",
+        "# fit the ensemble on the training dataset\n",
+        "ensemble.fit(X_train_full, y_train_full)\n",
+        "# make predictions on test set\n",
+        "yhat = ensemble.predict(X_test)\n",
+        "# evaluate predictions\n",
+        "score = mean_absolute_error(y_test, yhat)\n",
+        "print('Weighted Avg MAE: %.3f' % (score))\n",
+        "# evaluate each standalone model\n",
+        "scores = evaluate_models(models, X_train_full, X_test, y_train_full, y_test)\n",
+        "for i in range(len(models)):\n",
+        " print('>%s: %.3f' % (models[i][0], scores[i]))\n",
+        "# evaluate equal weighting\n",
+        "ensemble = VotingRegressor(estimators=models)\n",
+        "ensemble.fit(X_train_full, y_train_full)\n",
+        "yhat = ensemble.predict(X_test)\n",
+        "score = mean_absolute_error(y_test, yhat)\n",
+        "print('Voting MAE: %.3f' % (score))"
       ],
       "metadata": {
         "id": "8gj14Arlujm5"
