--- a/Ensemble_Learning.ipynb
+++ b/Ensemble_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMIsKB9knOsLjpg54nWEu5H",
+      "authorship_tag": "ABX9TyPd2JR+P81fjn9ck8vttnfU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,17 @@
       ],
       "metadata": {
         "id": "dFUplS0Yx9kt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Image(\"/content/cloned-repo/images/ensemble.png\")"
+      ],
+      "metadata": {
+        "id": "GMVpmMtFz5d6"
       },
       "execution_count": null,
       "outputs": []
@@ -363,6 +374,39 @@
       "metadata": {
         "id": "OcA02FtMufWG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Image(\"/content/cloned-repo/images/voting hard.png\")"
+      ],
+      "metadata": {
+        "id": "P-wa5_gC0EHe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Image(\"/content/cloned-repo/images/voting soft.png\")"
+      ],
+      "metadata": {
+        "id": "X3txqbyk0JR8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Image(\"/content/cloned-repo/images/vote with weights.png\")"
+      ],
+      "metadata": {
+        "id": "0Hkg14xA0N2b"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
