--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOMUyCS60mokdW8em94H2at",
+      "authorship_tag": "ABX9TyNP7LZTfA0eU/zq0mIUQLu2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,9 +103,9 @@
       },
       "source": [
         "plt.scatter(X_train[:,0],y_train)\n",
-        "plt.title('Training data')  \n",
-        "plt.xlabel('X')  \n",
-        "plt.ylabel('y') \n",
+        "plt.title('Training data')\n",
+        "plt.xlabel('X')\n",
+        "plt.ylabel('y')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -118,9 +118,9 @@
       },
       "source": [
         "plt.scatter(X_test[:,0],y_test)\n",
-        "plt.title('Test data')  \n",
-        "plt.xlabel('X')  \n",
-        "plt.ylabel('y') \n",
+        "plt.title('Test data')\n",
+        "plt.xlabel('X')\n",
+        "plt.ylabel('y')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -204,8 +204,8 @@
         "id": "ai7qAMTGALKh"
       },
       "source": [
-        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))  \n",
-        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))  \n",
+        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
       ],
       "execution_count": null,
@@ -274,7 +274,7 @@
       "source": [
         "**Assignment 1**<br>\n",
         "In the synthetic data, change the noise to 0.9 <br>\n",
-        "What impact does 90% noise have on the score? "
+        "What impact does 90% noise have on the score?"
       ]
     },
     {
@@ -284,7 +284,7 @@
       },
       "source": [
         "**Assignment 1b**<br>\n",
-        "What is the smallest data set you can use to get a score greater than 95% ?"
+        "What is the smallest data set you can use to get a significant increase in mean absolute error  ?"
       ]
     },
     {
