--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNP7LZTfA0eU/zq0mIUQLu2",
+      "authorship_tag": "ABX9TyM1MY9W1YJFaF+BF2OSP8Yf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "id": "5edad6a1WEMI"
       },
       "source": [
-        "X,y = make_regression(n_samples=800, n_features=10, random_state=1, noise=0,bias=3.5)\n",
+        "X,y = make_regression(n_samples=800, n_features=1, noise=0,bias=3.5)\n",
         "#X_train\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "X_train.shape"
@@ -284,7 +284,7 @@
       },
       "source": [
         "**Assignment 1b**<br>\n",
-        "What is the smallest data set you can use to get a significant increase in mean absolute error  ?"
+        "What is the smallest data set you can use to get a score greater than 95% ?"
       ]
     },
     {
