--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM1MY9W1YJFaF+BF2OSP8Yf",
+      "authorship_tag": "ABX9TyOC62ywALDbjzYblyt8ejao",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,11 +75,22 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "num_features=1"
+      ],
+      "metadata": {
+        "id": "li7egDSdFRCk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "5edad6a1WEMI"
       },
       "source": [
-        "X,y = make_regression(n_samples=800, n_features=1, noise=0,bias=3.5)\n",
+        "X,y = make_regression(n_samples=800, n_features=num_features, noise=0,bias=3.5)\n",
         "#X_train\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "X_train.shape"
@@ -252,11 +263,10 @@
         "x_vals = (-3,3)\n",
         "#use the x_values to calc the y_values\n",
         "\n",
-        "#for Assignment 2 uncomment the for loop\n",
-        "#for i in range(9):\n",
-        "#  plt.plot(X_test[:][i],reg.intercept_ + reg.coef_[i]*X_test[i], color='red')\n",
+        "for i in range(num_features):\n",
+        "  plt.plot(X_test[:][i],reg.intercept_ + reg.coef_[i]*X_test[i], color='red')\n",
         "#for Assignment 2 comment out the following line\n",
-        "y_vals = reg.intercept_ + reg.coef_[0:1] * x_vals\n",
+        "#y_vals = reg.intercept_ + reg.coef_[0:1] * x_vals\n",
         "plt.plot(x_vals, y_vals, color='red')\n",
         "\n",
         "#plot the line using the x and y values\n",
