--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOC62ywALDbjzYblyt8ejao",
+      "authorship_tag": "ABX9TyNWAy2ftyRaDGGFM9jD6crD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -294,7 +294,7 @@
       },
       "source": [
         "**Assignment 1b**<br>\n",
-        "What is the smallest data set you can use to get a score greater than 95% ?"
+        "What is the smallest data set you can use before it has a big impact on error ?"
       ]
     },
     {
