--- a/PCA0.ipynb
+++ b/PCA0.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA0.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPbH200T0huffzj51+A039L",
+      "authorship_tag": "ABX9TyMvDvlBJt/S8WxHrzN3ku0k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/PCA0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this notebook we explore the technique of principal component analysis"
+      ],
+      "metadata": {
+        "id": "JzBqjUf94V_u"
+      }
     },
     {
       "cell_type": "markdown",
@@ -77,7 +86,7 @@
         "id": "d7d6JVzSBequ"
       },
       "source": [
-        "# **Principal component analysis (PCA)** \n",
+        "# **Principal component analysis (PCA)**\n",
         "PCA is a multivariate technique used to emphasize variation and bring out strong patterns in a dataset. It's often used to make data easy to explore and visualize. It was invented in 1901 by Karl Pearson.\n",
         "\n",
         "When studying many variables at the same time, in order to interpret the information in a more meaningful form, it is necessary to reduce the number of variables to a few linear combinations of the data. Each linear combination will correspond to a principal component (PC). The number of PCs is less than or equal to the smaller of the number of original variables or the number of observations."
@@ -273,7 +282,7 @@
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.cm import register_cmap\n",
         "from scipy import stats\n",
-        "from sklearn.decomposition import PCA \n",
+        "from sklearn.decomposition import PCA\n",
         "import seaborn\n"
       ],
       "execution_count": null,
